--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">Rick and Morty</string>
     <string name="some_error">Sorry, there was an error, please try again</string>
     <string name="exception_message_generic">There was an error</string>
+    <string name="default_no_internet">You don\'t have internet connection</string>
+    <string name="generic_error_retry">An error was occurred, retry?</string>
+
 </resources>
